[package]
name = "rust-ardan-labs"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [ "session1/authentication",
    "session1/hello_world",
    "session1/variables",
    "session1/authentication",
    "session1/login",
    "session1/login_manager",

    "session2/hello",
    "session2/divide_work",
    "session2/thread_builder",
    "session2/scoped_threads",
    "session2/footgun",
]
