[package]
name = "rust-ardan-labs"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [ "session1/authentication",
    "session1/hello_world",
    "session1/variables",
    "session1/authentication",
    "session1/login",
    "session1/login_manager",

    "session2/hello",
    "session2/divide_work",
    "session2/thread_builder",
    "session2/scoped_threads",
    "session2/footgun",
    "session2/mutexes",
    "session2/rwlocks",
    "session2/deadlocks",
    "session2/dashing",
    "session2/parking",
    "session2/channels1",
    "session2/workers",
    "session2/workers2",
    "session2/affinity",
    "session2/priority",
    "session2/rayon_iters",
    "session2/rayon_scopes",

    "session3/hello_async",
    "session3/hello_tokio",
    "session3/blocking",
    "session3/tokio_testing",
    "session3/errors",
    "session3/fileio",
    "session3/restclient",
    "session3/tcpserver",
    "session3/channels",
    "session3/async_mutex", "session3/tokio_select", "session3/recursion", "session3/logspan", "session3/db", "session3/web_service", "session4/memory", "session4/low_level", "session4/dropping", "session4/refc", "session4/traits", "session4/generics", "session4/iterators", "session4/cycles", "session4/packing",
]
